--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2"
   }
